# voidllm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml  run-iis-local.ps1  run-local.ps1  voidllm.yaml.example  wai.yaml.example
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: configuration.md  getting-started.md  index.md  troubleshooting.md
docs/deployment/: binary.md  database.md
docs/enterprise/: license.md
docs/security/: hardening.md
internal/api/admin/: dashboard.go  dashboard_test.go  mcp_handler.go  mcp_handler_test.go  mcp_proxy.go  mcp_servers.go  mcp_servers_test.go  mcp_servers_url_test.go  mcp_usage.go  routes.go  system.go  system_test.go  usage.go  usage_test.go  users.go  users_test.go
internal/app/: app.go
internal/config/: config.go  env.go
internal/db/: models.go  models_test.go  users.go
internal/health/: checker.go  checker_test.go
internal/license/: heartbeat.go
internal/proxy/: azure.go  azure_test.go  gemini.go  gemini_test.go  handler.go  handler_test.go
scripts/: ensure_pg_db.py  migrate.py  reset_admin_password.py  restart-ollama-gpu.ps1  setup-iis-voidllm.ps1  test_mcp_api.py
scripts/db/: inspect_pg.py
src/wai/: __init__.py  __main__.py  app.py  cli.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
(+119 files in other folders)
