[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wai"
dynamic = ["version"]
description = "WAI — privacy-first LLM proxy and AI gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "bcrypt>=4.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "uuid6>=2024.1.12",
    "pyyaml>=6.0",
    "prometheus-client>=0.21.0",
    "asyncpg>=0.30.0",
]

[project.scripts]
wai = "wai.cli:main"

[tool.setuptools.dynamic]
version = { attr = "wai.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wai = ["py.typed", "db/migrations/*.sql"]
